# global_civic_ai_backend

./: .env.example.txt  .gitignore  DEV_GUIDE.html  README.md  alembic.ini  deploy_render.sh  generate_full_moral_compass_zip.py  generate_moral_compass_zip.py  git_all_in_one.bat  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  requirements.txt.txt  run-full-allinone.bat  runtime.txt
admin/: README.txt  dashboard_templates.txt  revenue_tracking.txt
alembic/: alembic.ini  env.py
alembic/versions/: 20260216_create_questions_responses.py  2c02694afb2e_initial_tables.py  4fb278b2fb3a_add_role_and_trait_columns.py  98ec6d6d4066_initial_tables.py  c0f4ecf521eb_initial_migration.py
app/: auth_utils.py  database.py  main.py  main.py.txt  models.py  schemas.py
app/routers/: adaptive.py  admin.py  admin.py.txt  assessment.py  auth.py  payments.py  payments.py.txt  questions.py  questions.py.txt  report.py  users.py
app/services/: adaptive_engine.py
backend/: .env  .env.backup  main.py  requirements.txt
backend/alembic/: env.py
backend/app/: database.py  database.py.backup  main.py  main.py.backup  models.py  schemas.py
backend/app/routers/: README.txt  adaptive.py  admin.py  assessment.py  auth.py  payments.py  questions.py  users.py
data/: README.txt  questions_120.csv  questions_120.csv.txt
docs/: README.txt  compliance_notes.txt  deployment_aws_gcp.txt  launch_guide.txt
frontend/: next.config.js  package-lock.json  package.json
frontend/app/login/: page.js
frontend/lib/: api.js
moral_compass_ai/data/: questions.csv
(+3 files in other folders)
