[tool.poetry]
name = "global-civic-ai-backend"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.134.0"
uvicorn = {extras = ["standard"], version = "^0.41.0"}
sqlalchemy = "^2.0.47"
alembic = "^1.18.4"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "4.0.1"
pydantic = "^2.12.5"
python-dotenv = "^1.2.1"
python-multipart = "^0.0.22"
email-validator = "^2.3.0"
aiosqlite = "^0.22.1"
reportlab = "^4.4.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
